management-meeting-backend/manifest/02-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: meeting-system
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      hostAliases:
        - ip: "192.168.23.110"
          hostnames:
            - "oauth-meeting.co"
            - "api-meeting.co"
            # Không cần npd-coroot.co ở đây nữa vì ta dùng internal DNS

      containers:
        - name: backend
          image: gk123a/meeting-management-backend:v1.0.1-prod
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 1.5Gi
